@@ -8,6 +8,8 @@
 #define USE_LEVELDB @USE_LEVELDB@
 #define USE_REDIS @USE_REDIS@
 
+#define USE_ICONV @USE_ICONV@
+
 #define VERSION_MAJOR "@VERSION_MAJOR@"
 #define VERSION_MINOR "@VERSION_MINOR@"
 
